[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbx-run-cost-py"
version = "0.1.0"
description = "Fast Databricks job run cost reporting for Python and PySpark jobs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Ravi Kiran Pagidi" }
]
keywords = [
  "databricks",
  "pyspark",
  "spark",
  "finops",
  "cost-monitoring",
  "dbu",
  "delta-lake",
  "data-engineering",
  "python"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: System :: Monitoring"
]
dependencies = []

[project.optional-dependencies]
spark = ["pyspark>=3.4"]
dev = ["build>=1.2"]

[project.urls]
Homepage = "https://github.com/ravikiranpagidi/dbx-run-cost-py"
Repository = "https://github.com/ravikiranpagidi/dbx-run-cost-py"
Issues = "https://github.com/ravikiranpagidi/dbx-run-cost-py/issues"

[project.scripts]
dbx-run-cost = "dbx_run_cost.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dbx_run_cost"]
